kube/components/trino/trino-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trino-coordinator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trino-coordinator
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: trino-coordinator
    spec:
      containers:
      - image: trinodb/trino:latest
        imagePullPolicy: Always
        name: trino
        ports:
          - containerPort: 8080
        command: ["/usr/lib/trino/bin/run-trino"]
        args: ["-v"]
        volumeMounts:
          - mountPath: /home/trino/config/jvm.config
            name: trino-configmap-volume
            subPath: jvm.config
          - mountPath: etc/trino/password.db
            name: trino-configmap-volume
            subPath: password.db
          #Coordinator
          - mountPath: /home/trino/config/config.properties
            name: trino-configmap-volume
            subPath: config.properties.coordinator
          #Worker
          - mountPath: /home/trino/config/config.properties.worker
            name: trino-configmap-volume
            subPath: config.properties.worker
          #Node
          - mountPath: /home/trino/config/node.properties
            name: trino-configmap-volume
            subPath: node.properties
          - mountPath: etc/trino/catalog/hive-metastore.properties
            name: trino-configmap-volume
            subPath: hive-metastore.properties
          - mountPath: etc/trino/catalog/iceberg.properties
            name: trino-configmap-volume
            subPath: iceberg.properties
      volumes:
        - name: trino-configmap-volume
          configMap:
            name: trino-configmap
