kube/components/trino/trino-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: trino-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trino-worker
  template:
    metadata:
      labels:
        app: trino-worker
    spec:
      containers:
      - image: trinodb/trino:471
      #- image: vjain143/fq-trino:471.0.1
        imagePullPolicy: Always
        name: trino
        ports:
          - containerPort: 8080
        command: ["/usr/lib/trino/bin/run-trino"]
        args: ["-v"]
        volumeMounts:
          # trino-configmap files
          - name: trino-configmap-volume
            mountPath: /home/trino/config/config.properties
            subPath: config.properties.worker
          - name: trino-configmap-volume
            mountPath: /home/trino/config/jvm.config
            subPath: jvm.config
          - name: trino-configmap-volume
            mountPath: /home/trino/config/node.properties
            subPath: node.properties
          - name: trino-configmap-volume
            mountPath: etc/trino/password-authenticator.properties
            subPath: password-authenticator.properties
          - name: trino-configmap-volume
            mountPath: etc/trino/password.db
            subPath: password.db
          # trino-datasource-configmap files
          #- name: trino-datasource-configmap-volume
          #  mountPath: etc/trino/catalog/gravitino.properties
          #  subPath: gravitino.properties
          - name: trino-datasource-configmap-volume
            mountPath: etc/trino/catalog/hms_db.properties
            subPath: hms_db.properties
          - name: trino-datasource-configmap-volume
            mountPath: etc/trino/catalog/llm.properties
            subPath: llm.properties
         # - name: trino-datasource-configmap-volume
         #   mountPath: etc/trino/catalog/iceberg.properties
         #   subPath: iceberg.properties
         # - name: trino-datasource-configmap-volume
         ##   mountPath: etc/trino/catalog/minio.properties
         #   subPath: minio.properties
          #- name: trino-datasource-configmap-volume
          #  mountPath: etc/trino/catalog/steampipe_postgres.properties.properties
          #  subPath: steampipe_postgres.properties.properties
          #- name: trino-datasource-configmap-volume
          #  mountPath: etc/trino/catalog/trino.properties
          #  subPath: trino.properties
      volumes:
        - name: trino-configmap-volume
          configMap:
            name: trino-configmap
        - name: trino-datasource-configmap-volume
          configMap:
            name: trino-datasource-configmap
  volumeClaimTemplates:
    - metadata:
        name: trino-tmp-data
      spec:
        storageClassName: manual
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
