kube/components/trino/trino-service.yml
apiVersion: v1
kind: Service
metadata:
  name: trino
  labels:
    app: trino
spec:
  type: NodePort
  ports:
    - name: https
      port: 8080
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
  selector:
    app: trino-coordinator
